- Fixed bug #48247 (PHP crashes on errors during startup) # # This was sum of many little things: # 1. Wrong assumption made in order_by_dep.awk on the ordering #    (that script was done prior to adding runtime deps..?) # 2. request shutdown calls weren't done in reverse order like all other #    shutdown funcs are called. # 3. config0.m4 rename is necessary for keeping things simple. #

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@280421 c90b9560-bf6c-de11-be94-00142212c4b1